# WebScrapping-Amazon-KNIME

./: MyKnime.knwf  README.md  pyproject.toml
notebooks/: AmazonReaderMain.ipynb
notebooks/WebScrappingTor/: ConnectionManager.py  FinalSpider.py
notebooks/WebScrappingTor/files/: output1.html  output10.html  output11.html  output12.html  output13.html  output14.html  output15.html  output16.html  output17.html  output18.html  output19.html  output2.html  output20.html  output21.html  output22.html  output23.html  output24.html  output25.html  output26.html  output27.html  output28.html  output29.html  output3.html  output30.html  output31.html  output32.html  output33.html  output34.html  output35.html  output36.html  output37.html  output38.html  output39.html  output4.html  output40.html  output41.html  output42.html  output43.html  output44.html  output45.html  (+16 more)
notebooks/amazon_webscrapping/: amazon_data.csv
notebooks/amazon_webscrapping/imdb/: settings.py
notebooks/amazon_webscrapping/imdb/spiders/: webscrapping_amazon.py
tests/: test_amazon_reader.py
